--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,3 +9,202 @@
 		color: red;
 	}
 }
+
+/* font */
+
+p {
+	color: #1E1E1E;
+	font-family: "Comfortaa",sans-serif;
+	font-size: 12px;
+	font-style: normal;
+	line-height: 1.3;
+}
+
+h1 {
+	color:#a99370;
+	font-family: "Julius sans one",sans-serif;
+	font-size: 40px;
+	font-style: normal;
+	line-height:1.3;
+	text-transform: uppercase;
+	text-align: end;
+}
+
+h2 {
+	color:#1E1E1E;
+	font-family:"Comfortaa",sans-serif;
+	font-size:20px;
+	font-style:bold;
+}
+
+h3 {
+	color: #a99370;
+	font-family:"Julius sans one",sans-serif;
+	font-size: 24px;
+	line-height:1.3;
+	font-style:normal;
+	text-align:center;
+}
+
+h4 {
+	color: #1E1E1E;
+	font-family: "Comfortaa",sans-serif;
+	font-size: 14px;
+	font-style: normal;
+	text-transform: uppercase;
+	line-height: 1.3;
+}
+
+li {
+	color: #1E1E1E;
+	font-family: "Comfortaa",sans-serif;
+	font-size: 12px;
+	font-style: normal;
+	line-height: 1.3;
+}
+
+.brown {
+	color: #a99370;
+}
+
+/* format */
+
+body {
+	margin: 20px 50px 50px 50px;
+}
+
+img {
+	margin-bottom: 20px;
+}
+
+.picture {
+	justify-self: start;
+	border-radius: 15px;
+}
+
+.title {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	justify-items: end;
+	grid-gap: 15px;
+}
+
+.intro {
+	font-style: italic;
+	background-color: #e9e4db;
+	padding: 20px 20px 20px 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.butt {
+	display:grid;
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 15px;
+	height: 50px;
+}
+
+.frame {
+	width: 130px;
+	padding: 10px 15px 10px 15px;
+	margin-top: 10px;
+	border-radius: 15px;
+	text-align: center;
+	text-decoration: none;
+	font-family:"Comfortaa",sans-serif;
+	font-size:20px;
+	transition-duration: .4s;
+	cursor: pointer;
+}
+
+.frame:first-child {
+	justify-self: end;
+	background-color: #a99370;
+	color: #ffffff;
+	border: 2px solid #a99370;
+} 
+
+.frame:last-child {
+	background-color: #a99370;
+	color: #ffffff;
+	border: 2px solid #a99370;
+}
+
+.nut {
+	list-style:none;
+	float:left;
+	padding-left:10px;
+	padding-right:10px;
+	line-height: 1.8;
+	border-right: 1px solid #1E1E1E;
+}
+
+nav {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+}
+
+.goback {
+	justify-self: end;
+}
+
+p a {
+	color: #1E1E1E;
+}
+
+ol a {
+	color: #1E1E1E;
+}
+
+h2 a {
+	color: #1E1E1E;
+}
+
+.time-container {
+	margin: auto;
+	width: 300px;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	color: #a99370;
+}
+
+.time-child {
+	margin: auto;
+	width: 50%;
+}
+
+li:last-child {
+	border:none;
+}
+
+.morphism {
+	position: relative;
+}
+
+.band {
+	position: absolute;
+	top: -17px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background: hsla(0, 0%, 100%, 0.7);
+}
+
+/* animation */
+
+.goback:hover {
+	filter: invert(100%)
+}
+
+p a:hover {
+	color: #a99370;
+}
+
+ol a:hover {
+	color: #a99370;
+}
+
+.frame:hover {
+	color: #1E1E1E;
+	background-color: #ffffff;
+	border: 2px solid #a99370;
+}
