--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,199 +12,237 @@
 
 /* font */
 
-p {
-	color: #1E1E1E;
-	font-family: "Comfortaa",sans-serif;
-	font-size: 12px;
-	font-style: normal;
-	line-height: 1.3;
-}
+@media screen and (width <= 330px) {
 
-h1 {
-	color:#a99370;
-	font-family: "Julius sans one",sans-serif;
-	font-size: 40px;
-	font-style: normal;
-	line-height:1.3;
-	text-transform: uppercase;
-	text-align: end;
-}
+	p {
+		color: #1E1E1E;
+		font-family: "Comfortaa",sans-serif;
+		font-size: 11px;
+		font-style: normal;
+		line-height: 1.3;
+	}
 
-h2 {
-	color:#1E1E1E;
-	font-family:"Comfortaa",sans-serif;
-	font-size:20px;
-	font-style:bold;
-}
+	h1 {
+		color:#1E1E1E;
+		font-family: "Julius sans one",sans-serif;
+		font-size: 40px;
+		font-style: normal;
+		line-height:1;
+		text-transform: uppercase;
+		text-align: start;
+	}
 
-h3 {
-	color: #a99370;
-	font-family:"Julius sans one",sans-serif;
-	font-size: 24px;
-	line-height:1.3;
-	font-style:normal;
-	text-align:center;
-}
+	h2 {
+		color:#1E1E1E;
+		font-family:"Comfortaa",sans-serif;
+		font-size:20px;
+		font-style:medium;
+	}
 
-h4 {
-	color: #1E1E1E;
-	font-family: "Comfortaa",sans-serif;
-	font-size: 14px;
-	font-style: normal;
-	text-transform: uppercase;
-	line-height: 1.3;
-}
+	h3 {
+		color: #a99370;
+		font-family:"Julius sans one",sans-serif;
+		font-size: 18px;
+		line-height:1.3;
+		font-style:normal;
+		text-align:center;
+	}
 
-li {
-	color: #1E1E1E;
-	font-family: "Comfortaa",sans-serif;
-	font-size: 12px;
-	font-style: normal;
-	line-height: 1.3;
-}
+	h4 {
+		color: #1E1E1E;
+		font-family: "Comfortaa",sans-serif;
+		font-size: 14px;
+		font-style: normal;
+		text-transform: uppercase;
+		line-height: 1.3;
+	}
 
-.brown {
-	color: #a99370;
-}
+	li {
+		color: #1E1E1E;
+		font-family: "Comfortaa",sans-serif;
+		font-size: 12px;
+		font-style: normal;
+		line-height: 1.3;
+	}
 
-/* format */
+	.brown {
+		color: #a99370;
+	}
 
-body {
-	margin: 20px 50px 50px 50px;
-}
+	/* format */
 
-img {
-	margin-bottom: 20px;
-}
+	article {
+		margin: 20px 20px 20px 20px;
+	}
 
-.picture {
-	justify-self: start;
-	border-radius: 15px;
-}
+	.title {
+		position: relative;
+		display: grid;
+		grid-template-columns: 1fr;
+		background: #fff;
+		z-index: -1;
+	}
 
-.title {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	justify-items: end;
-	grid-gap: 15px;
-}
+	.title-child {
+		position: absolute;
+		width: 50px;
+	}
 
-.intro {
-	font-style: italic;
-	background-color: #e9e4db;
-	padding: 20px 20px 20px 20px;
-	margin-top: 40px;
-	margin-bottom: 20px;
-}
+	.gradient {
+		position: absolute;
+		right: 0px;
+		height: 250px;
+		width: 70%;
+		border-radius: 10px;
+		background: linear-gradient(to right, white 0%, transparent 60%);
+	}
 
-.butt {
-	display:grid;
-	grid-template-columns: 1fr 1fr;
-	grid-gap: 15px;
-	height: 50px;
-}
+	.title-picture {
+		transform: scaleX(-1);
+		justify-self: end;
+		border-radius: 10px;
+		width: 70%;
+	}
 
-.frame {
-	width: 130px;
-	padding: 10px 15px 10px 15px;
-	margin-top: 10px;
-	border-radius: 15px;
-	text-align: center;
-	text-decoration: none;
-	font-family:"Comfortaa",sans-serif;
-	font-size:20px;
-	transition-duration: .4s;
-	cursor: pointer;
-}
+	.picture {
+		width: 100%;
+		justify-self: center;
+		border-radius: 15px;
+	}
 
-.frame:first-child {
-	justify-self: end;
-	background-color: #a99370;
-	color: #ffffff;
-	border: 2px solid #a99370;
-} 
+	.intro {
+		font-style: italic;
+		background-color: #e9e4db;
+		padding: 20px 20px 20px 20px;
+		margin-top: 20px;
+		margin-bottom: 20px;
+	}
 
-.frame:last-child {
-	background-color: #a99370;
-	color: #ffffff;
-	border: 2px solid #a99370;
-}
+	.butt {
+		display:grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 15px;
+	}
 
-.nut {
-	list-style:none;
-	float:left;
-	padding-left:10px;
-	padding-right:10px;
-	line-height: 1.8;
-	border-right: 1px solid #1E1E1E;
-}
+	.frame {
+		width: 90px;
+		padding: 5px 15px 5px 15px;
+		margin-top: 10px;
+		border-radius: 5px;
+		text-align: center;
+		text-decoration: none;
+		font-family:"Comfortaa",sans-serif;
+		font-size:14px;
+		transition-duration: .4s;
+		cursor: pointer;
+	}
 
-nav {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-}
+	.frame:first-child {
+		justify-self: end;
+		background-color: #a99370;
+		color: #ffffff;
+		border: 2px solid #a99370;
+	} 
 
-.goback {
-	justify-self: end;
-}
+	.frame:last-child {
+		background-color: #a99370;
+		color: #ffffff;
+		border: 2px solid #a99370;
+	}
 
-p a {
-	color: #1E1E1E;
-}
+	.nut {
+		list-style:none;
+		float:left;
+		padding-left:10px;
+		padding-right:10px;
+		line-height: 1.8;
+		border-left: 2px solid #ffffff;
+		color: #ffffff;
+	}
 
-ol a {
-	color: #1E1E1E;
-}
+	nav {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		height: 50px;
+		position: sticky;
+		top: 0;
+		background-color: #fff;
+		padding-top: 10px;
+		padding-bottom: 5px;
+		padding-left: 10px;
+		padding-right: 10px;
+		border-bottom: 2px solid #a99370;
+	}
 
-h2 a {
-	color: #1E1E1E;
-}
+	.goback {
+		justify-self: end;
+	}
 
-.time-container {
-	margin: auto;
-	width: 300px;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	color: #a99370;
-}
+	p a {
+		color: #1E1E1E;
+	}
 
-.time-child {
-	margin: auto;
-	width: 50%;
-}
+	ol a {
+		color: #1E1E1E;
+	}
 
-li:last-child {
-	border:none;
-}
+	h2 a {
+		color: #1E1E1E;
+	}
 
-.morphism {
-	position: relative;
-}
+	.time-container {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		color: #a99370;
+		justify-items: center;
+	}
 
-.band {
-	position: absolute;
-	top: -17px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	background: hsla(0, 0%, 100%, 0.7);
-}
+	.time-child {
+		text-align: center;
+	}
 
-/* animation */
+	.time-child:first-child {
+		justify-self: end;
+	}
 
-.goback:hover {
-	filter: invert(100%)
-}
+	.time-child:last-child {
+		justify-self: start;
+	}
 
-p a:hover {
-	color: #a99370;
-}
+	li:first-child {
+		border:none;
+	}
 
-ol a:hover {
-	color: #a99370;
-}
+	.morphism {
+		position: relative;
+	}
 
-.frame:hover {
-	color: #1E1E1E;
-	background-color: #ffffff;
-	border: 2px solid #a99370;
+	.band {
+		position: absolute;
+		top: -17px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		background: hsla(38, 29%, 39%, 0.892);
+	}
+
+	/* animation */
+
+	.goback:hover {
+		filter: invert(100%)
+	}
+
+	p a:hover {
+		color: #a99370;
+	}
+
+	ol a:hover {
+		color: #a99370;
+	}
+
+	.frame:hover {
+		color: #1E1E1E;
+		background-color: #ffffff;
+		border: 2px solid #a99370;
+	}
+
 }
