--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,7 +51,7 @@
 	h4 {
 		color: #1E1E1E;
 		font-family: "Comfortaa",sans-serif;
-		font-size: 14px;
+		font-size: 12px;
 		font-style: normal;
 		text-transform: uppercase;
 		line-height: 1.3;
@@ -219,6 +219,7 @@
 
 	.band {
 		position: absolute;
+		border-radius: 15px;
 		top: -17px;
 		padding-top: 10px;
 		padding-bottom: 10px;
