--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,7 +12,7 @@
 
 /* font */
 
-@media screen and (width <= 330px) {
+@media screen and (width <= 600px) {
 
 	p {
 		color: #1E1E1E;
@@ -77,37 +77,45 @@
 
 	.title {
 		position: relative;
-		display: grid;
-		grid-template-columns: 1fr;
+		display: flex;
+		justify-content: center;
 		background: #fff;
 		z-index: -1;
 	}
 
 	.title-child {
 		position: absolute;
-		width: 50px;
+		width: 210px;
+		justify-self: center;
 	}
 
 	.gradient {
 		position: absolute;
-		right: 0px;
 		height: 250px;
-		width: 70%;
+		width: 200px;
 		border-radius: 10px;
 		background: linear-gradient(to right, white 0%, transparent 60%);
 	}
 
 	.title-picture {
 		transform: scaleX(-1);
-		justify-self: end;
 		border-radius: 10px;
-		width: 70%;
+		width: 200px;
+		height: 250px;
 	}
 
-	.picture {
+	.middlepicture {
 		width: 100%;
 		justify-self: center;
 		border-radius: 15px;
+		height: 180px;
+	}
+
+	.lastpicture {
+		width: 100%;
+		justify-self: center;
+		border-radius: 15px;
+		height: 350px;
 	}
 
 	.intro {
@@ -171,7 +179,6 @@
 		padding-bottom: 5px;
 		padding-left: 10px;
 		padding-right: 10px;
-		border-bottom: 2px solid #a99370;
 	}
 
 	.goback {
@@ -193,6 +200,251 @@
 	.time-container {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
+		color: #a99370;
+		justify-items: center;
+	}
+
+	.time-child {
+		text-align: center;
+	}
+
+	.time-child:first-child {
+		justify-self: end;
+	}
+
+	.time-child:last-child {
+		justify-self: start;
+	}
+
+	li:first-child {
+		border:none;
+	}
+
+	.morphism {
+		position: relative;
+	}
+
+	.band {
+		position: absolute;
+		border-radius: 15px;
+		top: -17px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		background: hsla(38, 29%, 39%, 0.892);
+	}
+
+	/* animation */
+
+	.goback:hover {
+		filter: invert(100%)
+	}
+
+	p a:hover {
+		color: #a99370;
+	}
+
+	ol a:hover {
+		color: #a99370;
+	}
+
+	.frame:hover {
+		color: #1E1E1E;
+		background-color: #ffffff;
+		border: 2px solid #a99370;
+	}
+
+}
+
+@media screen and (width >= 600px) {
+
+	p {
+		color: #1E1E1E;
+		font-family: "Comfortaa",sans-serif;
+		font-size: 11px;
+		font-style: normal;
+		line-height: 1.3;
+	}
+
+	h1 {
+		color:#1E1E1E;
+		font-family: "Julius sans one",sans-serif;
+		font-size: 40px;
+		font-style: normal;
+		line-height: 1.3;
+		text-transform: uppercase;
+		text-align: start;
+	}
+
+	h2 {
+		color:#1E1E1E;
+		font-family:"Comfortaa",sans-serif;
+		font-size:20px;
+		font-style:medium;
+	}
+
+	h3 {
+		color: #a99370;
+		font-family:"Julius sans one",sans-serif;
+		font-size: 18px;
+		line-height:1.3;
+		font-style:normal;
+		text-align:center;
+		margin-top: 50px;
+	}
+
+	h4 {
+		color: #1E1E1E;
+		font-family: "Comfortaa",sans-serif;
+		font-size: 12px;
+		font-style: normal;
+		text-transform: uppercase;
+		line-height: 1.3;
+	}
+
+	li {
+		color: #1E1E1E;
+		font-family: "Comfortaa",sans-serif;
+		font-size: 12px;
+		font-style: normal;
+		line-height: 1.3;
+	}
+
+	.brown {
+		color: #a99370;
+	}
+
+	/* format */
+
+	article {
+		margin: 30px 100px 30px 100px;
+	}
+
+	.title {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-bottom: 30px;
+	}
+
+	.title-child {
+		justify-self: start;
+		width: 321px;
+	}
+
+	.title-picture {
+		justify-self: end;
+		border-radius: 10px;
+		object-fit: cover;
+		width: 500px;
+		height: 400px;
+		object-position: center;
+		margin-right: 50px;
+	}
+
+	.middlepicture {
+		width: 100%;
+		border-radius: 15px;
+		margin-top: 30px;
+	}
+
+	.lastpicture {
+		width: 100%;
+		border-radius: 15px;
+	}
+
+	.intro {
+		font-style: italic;
+		background-color: #e9e4db;
+		padding: 20px 20px 20px 20px;
+		margin-top: 20px;
+		margin-bottom: 20px;
+	}
+
+	.butt {
+		display:grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 15px;
+	}
+
+	.frame {
+		width: 90px;
+		padding: 5px 15px 5px 15px;
+		margin-top: 10px;
+		border-radius: 5px;
+		text-align: center;
+		text-decoration: none;
+		font-family:"Comfortaa",sans-serif;
+		font-size:14px;
+		transition-duration: .4s;
+		cursor: pointer;
+	}
+
+	.frame:first-child {
+		justify-self: end;
+		background-color: #a99370;
+		color: #ffffff;
+		border: 2px solid #a99370;
+	} 
+
+	.frame:last-child {
+		background-color: #a99370;
+		color: #ffffff;
+		border: 2px solid #a99370;
+	}
+
+	.jux {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 100px;
+	}
+
+	.jux-child {
+		line-height: 1.8;
+	}
+
+	.nut {
+		list-style:none;
+		float:left;
+		padding-left:10px;
+		padding-right:10px;
+		line-height: 1.8;
+		border-left: 2px solid #ffffff;
+		color: #ffffff;
+	}
+
+	nav {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		height: 50px;
+		position: sticky;
+		top: 0;
+		background-color: #fff;
+		padding-top: 10px;
+		padding-bottom: 5px;
+		padding-left: 100px;
+		padding-right: 100px;
+	}
+
+	.goback {
+		justify-self: end;
+	}
+
+	p a {
+		color: #1E1E1E;
+	}
+
+	ol a {
+		color: #1E1E1E;
+	}
+
+	h2 a {
+		color: #1E1E1E;
+	}
+
+	.time-container {
+		display: flex;
+		gap: 50px;
+		justify-content: center;
 		color: #a99370;
 		justify-items: center;
 	}
